# FMCW_Radar_Simulator_C

./: .gitignore
cpp_version/: .gitignore  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  main.cpp  vcpkg.json
cpp_version/resources/: resources.qrc
cpp_version/resources/style/: dark_radar.qss
cpp_version/src/core/: sim_result.h  simulator.cpp  simulator.h
cpp_version/src/dsp/: aoa_fft.c  aoa_fft.h  beat_gen.c  beat_gen.h  cfar.c  cfar.h  chirp_gen.c  chirp_gen.h  clustering.c  clustering.h  data_association.c  data_association.h  doppler_fft.c  doppler_fft.h  ekf_tracker.c  ekf_tracker.h  radar_types.c  radar_types.h  range_fft.c  range_fft.h
cpp_version/src/ui/: architecture_window.cpp  architecture_window.h  main_window.cpp  main_window.h  param_panel.cpp  param_panel.h  pipeline_inspector.cpp  pipeline_inspector.h  plot_widget.cpp  plot_widget.h  scene_widget.cpp  scene_widget.h
cpp_version/src/ui/tabs/: tab1_signal.cpp  tab1_signal.h  tab2_rdm.cpp  tab2_rdm.h  tab3_cfar.cpp  tab3_cfar.h  tab4_pipeline.cpp  tab4_pipeline.h
